--- a/noumena/2024/index.org
+++ b/noumena/2024/index.org
@@ -46,5 +46,33 @@
   <a href="/noumena/2024/february/01">1</a>   <a href="/noumena/2024/february/02">2</a> <a href="/noumena/2024/february/03">3</a>   <a href="/noumena/2024/february/04">4</a>   <a href="/noumena/2024/february/05">5</a>   <a href="/noumena/2024/february/06">6</a>   <a href="/noumena/2024/february/07">7</a>   <a href="/noumena/2024/february/08">8</a>   <a href="/noumena/2024/february/09">9</a>
   <a href="/noumena/2024/february/10">10</a>   <a href="/noumena/2024/february/11">11</a>   <a href="/noumena/2024/february/12">12</a>   <a href="/noumena/2024/february/13">13</a>   <a href="/noumena/2024/february/14">14</a>   <a href="/noumena/2024/february/15">15</a>   <a href="/noumena/2024/february/16">16</a>
   <a href="/noumena/2024/february/17">17</a>   <a href="/noumena/2024/february/18">18</a>   <a href="/noumena/2024/february/19">19</a>   <a href="/noumena/2024/february/20">20</a>   <a href="/noumena/2024/february/21">21</a>   <a href="/noumena/2024/february/22">22</a>   <a href="/noumena/2024/february/23">23</a>
-  <a href="/noumena/2024/february/24">24</a>   <a href="/noumena/2024/february/25">25</a>   <a href="/noumena/2024/february/26">26</a>   <a href="/noumena/2024/february/27">27</a>   <a href="/noumena/2024/february/28">28</a>   <a>29</a> </div>
+  <a href="/noumena/2024/february/24">24</a>   <a href="/noumena/2024/february/25">25</a>   <a href="/noumena/2024/february/26">26</a>   <a href="/noumena/2024/february/27">27</a>   <a href="/noumena/2024/february/28">28</a>   <a href="/noumena/2024/february/29">29</a> </div>
+#+end_export
+
+
+* [[file:march/][March]]
+
+#+begin_export html
+<div class="weekdays">
+  <span>Sun</span>
+  <span>Mon</span>
+  <span>Tue</span>
+  <span>Wed</span>
+  <span>Thu</span>
+  <span>Fri</span>
+  <span>Sat</span>
+</div>
+<br>
+<div class="calendar">
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <a href="/noumena/2024/march/01">1</a>   <a href="/noumena/2024/march/02">2</a>
+  <a href="/noumena/2024/march/03">3</a>   <a href="/noumena/2024/march/04">4</a>   <a href="/noumena/2024/march/05">5</a>   <a href="/noumena/2024/march/06">6</a>   <a href="/noumena/2024/march/07">7</a>   <a href="/noumena/2024/march/08">8</a>   <a href="/noumena/2024/march/09">9</a>
+  <a href="/noumena/2024/march/10">10</a>   <a href="/noumena/2024/march/11">11</a>   <a>12</a>   <a>13</a>   <a>14</a>   <a>15</a>   <a>16</a>
+  <a>17</a>   <a>18</a>   <a>19</a>   <a>20</a>   <a>21</a>   <a>22</a>   <a>23</a>
+  <a>24</a>   <a>25</a>   <a>26</a>   <a>27</a>   <a>28</a>   <a>29</a> <a>30</a> <a>31</a>
+  </div>
 #+end_export
