--- a/noumena/2024/march/11/index.org
+++ b/noumena/2024/march/11/index.org
@@ -9,7 +9,19 @@
 
 [[file:carried-by-chris-3.jpg]]
 
+* Good Morning, Noumena!
+
+Noumena has grown tired of eating oatmeal in the mornings, so last night after she went to bed I made a batch of porridge that should get us through the weak. She wakes me up at 7:30am. Since daylight savings time, I expect that to be normal for a while. Having converted her crib into the toddler bed, when she awakens, she wanders around her room making a huge mess daily. For one reason or another, one of the most appealing things to her is to remove the drawers from her dresser. I often barely clean her room as any work put into it will be undone by the time I enter her room the next morning.
+
+While she rustles about in her room, she doesn't make any noises of discontent which allows me to warm a bowl of porridge while she plays. Since she's been eating so little oatmeal, probably because she's tired of it, I warm a smaller portion of porridge proportional to the amount of oatmeal she's accustomed to as well as a bowl for myself. I sprinkle cinnamon over the top of it, set her place and go to her room to retrieve her.
+
+Last time when all she'd been eating in the mornings was porridge, she'd grown tired of it as well, so I was worried that she wouldn't like it and had anxiety about what I'd be feeding her for breakfast in the mornings were she to dislike it. Thankfully, however, she surpassed my expectations and absolutely loved the porridge demanding more from my bowl!
+
+Recently, Noumena's independence has waxed to full tilt and everything has become a challenge. Changing a diaper is a challenge. Putting on clothes is a challenge. Taking a bath is a challenge. Going outside is a challenge. This morning is no different. It's chilly outside, so I give her the option between her red and pink tops. She chooses the pink one, so I put the red one back and wrestle her to the ground to get the top she chose on. Pairing that with black pants and shoes that were also a struggle to get on, she's finally dressed and we make our way to school.
+
 * Daycare Pickup
+
+My time has been so limited because of demands at work, so cooking has been a bit of a struggle recently. As such, dinner is not ready and I am not prepared to deal with the wrath of a hangry toddler when we get home, so I phoned Chris asking him if he wanted to meet us for dinner. He agrees, asking me what I had in mind. I told him that anywhere with rice is good because I know, failing anything else, I can get Noumena to eat rice. He suggests a place called CAVA which serves build-your-own veggie bowls and I agree, so I head to Noumena's daycare to pick her up and meet Chris for dinner.
 
 #+begin_export html
 <div class="video-container">
@@ -19,7 +31,23 @@
 
 * Dinner
 
+Noumena is thrilled to see Chris. The short time we spent living with Chris has built this incredible bond between the two and she's ecstatic at the prospect of seeing him every time I mention him. We arrive at the restaurant a bit earlier than Chris so while we await his arrival in the parking lot, I ask Noumena "where is he?"
+
+In the voice of an angel toddler, Noumena repeats after me, "Where is he?"
+
+Noumena's become impatient waiting for him and lets out grunts and whines and points in variegated directions as we wander around the parking lot looking for him. We see him pull up as I hold her balancing on the rails outside the restaurant and walk to meet him. Of course, the first thing she wants him to do is hold her. We begin to walk into the restaurant and I try to take her back from Chris but she refuses. Chris carries her into the restaurant only handing her back to me once we've already begun to order food.
+
+While building up our bowl, Noumena's impatience grows, and she displays it with grunts and whines as the worker constructs the bowl. I'm so glad I decided to take her out. I could not have handled this impatience if I were trying to prepare dinner with her at home! Once our bowl is assembled, I hand Noumena my card to tap to pay (one of her favorite things to do), she takes the printed out receipt and we sit down to eat.
+
+Remembering the last time we went to CAVA, I entirely expected Noumena to only eat the rice and lentils, but I was pleasantly surprised when the first thing she went for was the falafel! Chris sits across from us on a chair while I sit on a long wooden booth giving Noumena almost the full breadth of the booth to wander as she paces back and forth from food to corner making all manner of toddler noises and sounds as she does so speaking a language only she understands with periodic lapses into the English language. Chris is surprised by her energy and I inform him that this is what I've become accustomed to. Noumena eats a bit of everything in the bowl and takes a special liking to the hummus assuaging my parental anxiety of ensuring my beloved is well fed.
+
+Nearing the end of our meal, after Noumena's focus has drifted from consistently returning to her food to rambunctious toddler tomfoolery, she begins climbing onto the table next to us. As permissive as I am with her, neither her safety nor social convention sanction such behavior, so I'm forced to remove her from the table and seat her back down onto the booth. Expressing her discontent in the corner of the booth, her wails inform us of the grave infraction I've committed. Nevertheless, I hold firm, and after asking Chris if he felt any sense of embarrassment, I tell her that no one is paying her any mind, so her wailing will not grant her what she wants and that no one else seems the least bit disturbed by her cries either. Once she looks around and realizes that making a fuss, will in no way get her what she wants, she calms down. Later, she tries the same gambit and receives the same result which calms her down considerably more quickly the second time around.
+
+After all this fuss, we've finished eating and it's time to go. I prompt Noumena to follow me to take the trays to the garbage and she almost does, but gets distracted and starts heading to where the bowls are assembled. Chris wrangles her into his arms and we head out.
+
 * J. Wayne and Delores Barr Weaver Park
+
+Of course Noumena's bursting with energy and Daylight Savings Time in conjunction with the lengthening days has provided us with adequate time to head down to the park that lines the river in front of the YMCA to let her burn off some steam. Chris and I play with her until it's time to go and we make a couple new friends along the way.
 
 [[file:inside-ball.jpg]]
 
@@ -43,16 +71,34 @@
 </div>
 #+end_export
 
+When it's finally time to leave, Noumena insists that Chris carry her. I try to alleviate him given that I'm accustomed to carrying her such great distances, but she refuses to be out of his arms and he carries her all the way back to our respective vehicles.
+
 [[file:carried-by-chris-1.jpg]]
 
 [[file:carried-by-chris-2.jpg]]
 
-
-
 * Back At Home
+
+It's 7:30pm by the time we arrive home and a swell of relief washes over me knowing that I only have to keep Noumena entertained for 50 minutes before bath time. Walking through the door, she's excited as always to see Chalmers, but I think he must have been a little rough with his greeting because she's a bit fussier than I expected. Noumena rolls on the ground initially to express her discontent, but then begins to realize that she can slide herself along the floor which becomes a source of entertainment as the tears melt away.
 
 #+begin_export html
 <div class="video-container">
 <iframe width="1920" height="713" src="https://www.youtube.com/embed/7lYdLdYxYis" title="Sliding On The Floor" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 #+end_export
+
+The remnants of breakfast line Noumena's table, so when she gets near it, she remembers the breakfast she had and starts asking for some. Initially, I'm hesitant to give her any food as she just had dinner. I try seeing if she'd simply rather have water and when she points towards the cupboard, I hand her one of her cups to see if I can fill it with just soymilk or water. She complains again and points back to the open cupboard. When I raise her up to it, she grabs her baby shark bowl, says the word "shark" and it becomes clear that if I decide to die on this hill, there will be hell to pay. So I give in. After all, a dessert of whole fruits and sweet potatoes is far from the worst dessert a child can have, so I warm a small bowl of porridge and she sits down to eat. To my surprise she finishes quickly and demands more. Once again, I give in and let her eat porridge until she's had her fill.
+
+We watch a few music videos and baby shark until it's finally time to take Noumena into the bath, which, of course, is a fight.
+
+* Bath Time
+
+After the bath is drawn and Noumena's calmed down in the tub, her mother arrives with some new books in tow. Knowing that her mother is the only thing Noumena will be able to focus on, I demand that her mother stay in the bathroom with us as I bathe Noumena so as to keep Noumena focused. While I shampoo Noumena's head, her mother reads her some of the new books keeping her distracted while I rinse her hair and scrub her down. Her mom asks if there's enough time to read to Noumena before bed and I say yes, so we hastily get dressed in pajamas and Noumena and her mother sit down to read a few stories before bed time.
+
+* Bed time
+
+At about 8:45pm, I sit with Noumena and her mother on the couch brushing her hair as she reads to Noumena. Noumena wants me to read her a story as well, so she hands me one of the books and we get about halfway through before Noumena's become distracted and it's time to take her to brush her teeth and go to bed.
+
+As is typical for us recently, I lay with Noumena in her bed as our bed time playlist plays and she protests going to sleep briefly before eventually succumbing to the sand man and falling asleep right next to daddy.
+
+Noumena, I love that you love spending time with Chris. I'll see if I can get us to do that more often since you love him so much! I'm so glad you had such a good time tonight and I look forward to tomorrow! Sweet dreams, my lovely, precious bundle of joy! I'll see you in the morning!
