--- a/noumena/2024/march/index.org
+++ b/noumena/2024/march/index.org
@@ -22,8 +22,8 @@
   <span></span>
   <a href="/noumena/2024/march/01">1</a>   <a href="/noumena/2024/march/02">2</a>
   <a href="/noumena/2024/march/03">3</a>   <a href="/noumena/2024/march/04">4</a>   <a href="/noumena/2024/march/05">5</a>   <a href="/noumena/2024/march/06">6</a>   <a href="/noumena/2024/march/07">7</a>   <a href="/noumena/2024/march/08">8</a>   <a href="/noumena/2024/march/09">9</a>
-  <a href="/noumena/2024/march/10">10</a>   <a href="/noumena/2024/march/11">11</a>   <a>12</a>   <a>13</a>   <a>14</a>   <a>15</a>   <a>16</a>
-  <a>17</a>   <a>18</a>   <a>19</a>   <a>20</a>   <a>21</a>   <a>22</a>   <a>23</a>
+  <a href="/noumena/2024/march/10">10</a>   <a href="/noumena/2024/march/11">11</a>   <a href="/noumena/2024/march/12">12</a>   <a href="/noumena/2024/march/13">13</a>   <a href="/noumena/2024/march/14">14</a>   <a href="/noumena/2024/march/15">15</a>   <a href="/noumena/2024/march/16">16</a>
+  <a href="/noumena/2024/march/17">17</a>   <a href="/noumena/2024/march/18">18</a>   <a>19</a>   <a>20</a>   <a>21</a>   <a>22</a>   <a>23</a>
   <a>24</a>   <a>25</a>   <a>26</a>   <a>27</a>   <a>28</a>   <a>29</a> <a>30</a> <a>31</a>
   </div>
 #+end_export
