--- a/noumena/2024/index.org
+++ b/noumena/2024/index.org
@@ -72,7 +72,80 @@
   <a href="/noumena/2024/march/01">1</a>   <a href="/noumena/2024/march/02">2</a>
   <a href="/noumena/2024/march/03">3</a>   <a href="/noumena/2024/march/04">4</a>   <a href="/noumena/2024/march/05">5</a>   <a href="/noumena/2024/march/06">6</a>   <a href="/noumena/2024/march/07">7</a>   <a href="/noumena/2024/march/08">8</a>   <a href="/noumena/2024/march/09">9</a>
   <a href="/noumena/2024/march/10">10</a>   <a href="/noumena/2024/march/11">11</a>   <a href="/noumena/2024/march/12">12</a>   <a href="/noumena/2024/march/13">13</a>   <a href="/noumena/2024/march/14">14</a>   <a href="/noumena/2024/march/15">15</a>   <a href="/noumena/2024/march/16">16</a>
-  <a href="/noumena/2024/march/17">17</a>   <a href="/noumena/2024/march/18">18</a>   <a href="/noumena/2024/march/19">19</a>   <a href="/noumena/2024/march/20">20</a>   <a href="/noumena/2024/march/21">21</a>   <a>22</a>   <a>23</a>
-  <a>24</a>   <a>25</a>   <a>26</a>   <a>27</a>   <a>28</a>   <a>29</a> <a>30</a> <a>31</a>
+  <a href="/noumena/2024/march/17">17</a>   <a href="/noumena/2024/march/18">18</a>   <a href="/noumena/2024/march/19">19</a>   <a href="/noumena/2024/march/20">20</a>   <a href="/noumena/2024/march/21">21</a>   <a href="/noumena/2024/march/22">22</a>   <a href="/noumena/2024/march/23">23</a>
+  <a href="/noumena/2024/march/24">24</a>   <a href="/noumena/2024/march/25">25</a>   <a href="/noumena/2024/march/26">26</a>   <a href="/noumena/2024/march/27">27</a>   <a href="/noumena/2024/march/28">28</a>   <a>29</a> <a>30</a> <a>31</a>
+  </div>
+#+end_export
+
+
+* [[file:april/][April]]
+
+#+begin_export html
+<div class="weekdays">
+  <span>Sun</span>
+  <span>Mon</span>
+  <span>Tue</span>
+  <span>Wed</span>
+  <span>Thu</span>
+  <span>Fri</span>
+  <span>Sat</span>
+</div>
+<br>
+<div class="calendar">
+  <span></span>
+  <a>1</a>   <a>2</a>   <a>3</a>   <a>4</a>   <a>5</a>   <a>6</a>   <a>7</a>
+  <a>8</a>   <a>9</a>   <a>10</a>   <a>11</a>   <a>12</a>   <a>13</a>   <a>14</a>
+  <a>15</a>   <a>16</a>   <a>17</a>   <a>18</a>   <a>19</a>   <a>20</a>   <a>21</a>
+  <a>22</a>   <a>23</a>   <a>24</a>   <a>25</a>   <a>26</a>   <a>27</a>   <a>28</a>
+  <a>29</a>   <a>30</a>
+  </div>
+#+end_export
+
+* [[file:may/][May]]
+
+#+begin_export html
+<div class="weekdays">
+  <span>Sun</span>
+  <span>Mon</span>
+  <span>Tue</span>
+  <span>Wed</span>
+  <span>Thu</span>
+  <span>Fri</span>
+  <span>Sat</span>
+</div>
+<br>
+<div class="calendar">
+  <span></span>
+  <span></span>
+  <span></span>
+  <a>1</a>   <a>2</a>   <a>3</a>   <a>4</a>   <a>5</a>   <a>6</a>   <a>7</a>
+  <a>8</a>   <a>9</a>   <a>10</a>   <a>11</a>   <a>12</a>   <a>13</a>   <a>14</a>
+  <a>15</a>   <a>16</a>   <a>17</a>   <a>18</a>   <a>19</a>   <a>20</a>   <a>21</a>
+  <a>22</a>   <a>23</a>   <a>24</a>   <a>25</a>   <a>26</a>   <a>27</a>   <a>28</a>
+  <a>29</a>   <a>30</a>
+  <a>31</a></div>
+#+end_export
+
+
+* [[file:june/][June]]
+
+#+begin_export html
+<div class="weekdays">
+  <span>Sun</span>
+  <span>Mon</span>
+  <span>Tue</span>
+  <span>Wed</span>
+  <span>Thu</span>
+  <span>Fri</span>
+  <span>Sat</span>
+</div>
+<br>
+<div class="calendar">
+  <span></span>
+  <a>1</a>   <a>2</a>   <a>3</a>   <a>4</a>   <a href="/noumena/2024/june/05/">5</a>   <a href="/noumena/2024/june/06/">6</a>   <a>7</a>
+  <a>8</a>   <a>9</a>   <a>10</a>   <a>11</a>   <a>12</a>   <a>13</a>   <a>14</a>
+  <a>15</a>   <a>16</a>   <a>17</a>   <a>18</a>   <a>19</a>   <a>20</a>   <a>21</a>
+  <a>22</a>   <a>23</a>   <a>24</a>   <a>25</a>   <a>26</a>   <a>27</a>   <a>28</a>
+  <a>29</a>   <a>30</a>
   </div>
 #+end_export
