--- a/noumena/2024/index.org
+++ b/noumena/2024/index.org
@@ -73,7 +73,7 @@
   <a href="/noumena/2024/march/03">3</a>   <a href="/noumena/2024/march/04">4</a>   <a href="/noumena/2024/march/05">5</a>   <a href="/noumena/2024/march/06">6</a>   <a href="/noumena/2024/march/07">7</a>   <a href="/noumena/2024/march/08">8</a>   <a href="/noumena/2024/march/09">9</a>
   <a href="/noumena/2024/march/10">10</a>   <a href="/noumena/2024/march/11">11</a>   <a href="/noumena/2024/march/12">12</a>   <a href="/noumena/2024/march/13">13</a>   <a href="/noumena/2024/march/14">14</a>   <a href="/noumena/2024/march/15">15</a>   <a href="/noumena/2024/march/16">16</a>
   <a href="/noumena/2024/march/17">17</a>   <a href="/noumena/2024/march/18">18</a>   <a href="/noumena/2024/march/19">19</a>   <a href="/noumena/2024/march/20">20</a>   <a href="/noumena/2024/march/21">21</a>   <a href="/noumena/2024/march/22">22</a>   <a href="/noumena/2024/march/23">23</a>
-  <a href="/noumena/2024/march/24">24</a>   <a href="/noumena/2024/march/25">25</a>   <a href="/noumena/2024/march/26">26</a>   <a href="/noumena/2024/march/27">27</a>   <a href="/noumena/2024/march/28">28</a>   <a href="/noumena/2024/march/29">29</a> <a href="/noumena/2024/march/30">30</a> <a>31</a>
+  <a href="/noumena/2024/march/24">24</a>   <a href="/noumena/2024/march/25">25</a>   <a href="/noumena/2024/march/26">26</a>   <a href="/noumena/2024/march/27">27</a>   <a href="/noumena/2024/march/28">28</a>   <a href="/noumena/2024/march/29">29</a> <a href="/noumena/2024/march/30">30</a> <a href="/noumena/2024/march/31">31</a>
   </div>
 #+end_export
 
